managed to center the page - working on the structure.

--- a/index.html
+++ b/index.html
@@ -17,20 +17,43 @@
               </button>
               <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                 <div class="navbar-nav">
-                  <a class="nav-item nav-link active" href="#">Home <span class="sr-only">(current)</span></a>
-                  <a class="nav-item nav-link" href="#">Features</a>
+                  <a class="nav-item nav-link active" href="#">Welcome <span class="sr-only">(current)</span></a>
+                  <a class="nav-item nav-link" href="#">Offering</a>
+                  <a class="nav-item nav-link" href="#">Taste</a>
                   <a class="nav-item nav-link" href="#">Pricing</a>
+                  <a class="nav-item nav-link" href="#">Contact</a>
                 </div>
               </div>
           </nav>
         </header>
 
-        <div class="container">
-            <div class="vh-100 col-md-8 offset-md-2">
-                <h1 class="align-middle display-4 headline">The home of Valorant montages</h1>
+        <div class="container text-center">
+          <div class="row vh-100">
+            <div class="col-md-8 offset-md-2 my-auto">
+                <h1 class="align-middle display-4 headline">The home of Valorant montages.</h1>
                   <p class="headline lead">I create Valorant montages to make your frags look even more sick.</p>
+            </div>
           </div>
         </div>
+
+        <div class="container text-center">
+          <div class="row vh-100">
+            <div class="col-md-8 offset-md-2 my-auto">
+                <h1 class="align-middle display-4 headline">My offering. For you.</h1>
+                  <p class="headline lead">Flow. Creativity. Superiority.</p>
+            </div>
+          </div>
+        </div>
+
+        <div class="container text-center">
+          <div class="row vh-100">
+            <div class="col-md-8 offset-md-2 my-auto">
+                <h1 class="align-middle display-4 headline">Shining. For a small price.</h1>
+                  <p class="headline lead">Minute based pricing. Costs are in your hand.</p>
+            </div>
+          </div>
+        </div>
+
         <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
