--- a/index.html
+++ b/index.html
@@ -36,19 +36,27 @@
           </div>
         </div>
 
-        <div class="container text-center">
-          <div class="row vh-100">
-            <div class="col-md-8 offset-md-2 my-auto">
-                <h1 class="align-middle display-4 headline">My offering. For you.</h1>
-                  <p class="headline lead">Flow. Creativity. Superiority.</p>
+        <div class="container-fluid">
+          <div class="row my-auto">
+            <h1 class="lead pic-test col bg text-center">Picture here</h1>
+            <h1 class="lead col pic-test text-center">Hello world</h1>
             </div>
           </div>
-        </div>
+          <div class="row my-auto">
+            <h1 class="lead col pic-test text-center">Hello world</h1>
+            <h1 class="lead pic-test col bg text-center">Picture here</h1>
+            </div>
+          </div>
+          <div class="row my-auto">
+            <h1 class="lead pic-test col bg text-center">Picture here</h1>
+            <h1 class="lead col pic-test text-center">Hello world</h1>
+            </div>
+          </div>
 
-        <div class="container text-center">
+        <div class="container-fluid">
           <div class="row vh-100">
             <div class="col-md-8 offset-md-2 my-auto">
-                <h1 class="align-middle display-4 headline">Shining. For a small price.</h1>
+                
                   <p class="headline lead">Minute based pricing. Costs are in your hand.</p>
             </div>
           </div>
