fixed the center problem of the offering boxes

--- a/index.html
+++ b/index.html
@@ -37,19 +37,19 @@
         </div>
 
         <div class="container-fluid">
-          <div class="row my-auto">
-            <h1 class="lead pic-test col bg text-center">Picture here</h1>
-            <h1 class="lead col pic-test text-center">Hello world</h1>
+          <div class="row offer-height">
+            <h1 class="lead col bg">GIF of content floating</h1>
+            <h1 class="col display-5 text-left my-auto">You deliver as much content as you want. I pick what you need.</h1>
+            </div> 
+          </div>
+          <div class="row offer-height">
+            <h1 class="display-5 col text-right my-auto">You decide how long your clip should be. I make this time an experience.</h1>
+            <h1 class="lead col bg">GIF of a clock racing</h1>
             </div>
           </div>
-          <div class="row my-auto">
-            <h1 class="lead col pic-test text-center">Hello world</h1>
-            <h1 class="lead pic-test col bg text-center">Picture here</h1>
-            </div>
-          </div>
-          <div class="row my-auto">
-            <h1 class="lead pic-test col bg text-center">Picture here</h1>
-            <h1 class="lead col pic-test text-center">Hello world</h1>
+          <div class="row offer-height">
+            <h1 class="lead col bg">Music GIF</h1>
+            <h1 class="display-5 col text-left my-auto">You deliver the sound you want. I care for designing and mixing it.</h1>
             </div>
           </div>
 
