--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         </header>
 
         <div class="container text-center">
-          <div class="row vh-100">
+          <div class="row vh-100 bg-ws">
             <div class="col-md-8 offset-md-2 my-auto">
                 <h1 class="align-middle display-4 headline">The home of Valorant montages.</h1>
                   <p class="headline lead">I create Valorant montages to make your frags look even more sick.</p>
@@ -36,29 +36,61 @@
           </div>
         </div>
 
-        <div class="container-fluid">
+        <div class="container">
           <div class="row offer-height">
             <h1 class="lead col bg">GIF of content floating</h1>
             <h1 class="col display-5 text-left my-auto">You deliver as much content as you want. I pick what you need.</h1>
             </div> 
-          </div>
           <div class="row offer-height">
             <h1 class="display-5 col text-right my-auto">You decide how long your clip should be. I make this time an experience.</h1>
             <h1 class="lead col bg">GIF of a clock racing</h1>
             </div>
-          </div>
           <div class="row offer-height">
             <h1 class="lead col bg">Music GIF</h1>
-            <h1 class="display-5 col text-left my-auto">You deliver the sound you want. I care for designing and mixing it.</h1>
+            <h1 class="display-5 col text-left my-auto offer-text">You deliver the sound you want. I care for designing and mixing it.</h1>
             </div>
           </div>
 
-        <div class="container-fluid">
-          <div class="row vh-100">
-            <div class="col-md-8 offset-md-2 my-auto">
-                
-                  <p class="headline lead">Minute based pricing. Costs are in your hand.</p>
+          <div class="container-fluid">
+            <div class="row vh-100 bg-ws">
+              <video autoplay muted loop id="myVideo">
+                <source src="res/movie.mp4" type="video/mp4">
+              </video>
+              </div>
             </div>
+
+        <div class="container">
+          <div class="row">
+            <div class="col-sm">
+            <div class="card" style="width: 20rem;">
+              <img src="..." class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">Card title</h5>
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <a href="#" class="btn btn-primary">Go somewhere</a>
+              </div>
+            </div>
+          </div>
+            <div class="col-sm">
+            <div class="card" style="width: 20rem;">
+              <img src="..." class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">Card title</h5>
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <a href="#" class="btn btn-primary">Go somewhere</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-sm">
+            <div class="card" style="width: 20rem;">
+              <img src="..." class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">Card title</h5>
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <a href="#" class="btn btn-primary">Go somewhere</a>
+              </div>
+            </div>
+          </div>
           </div>
         </div>
 
