--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <header>
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <a class="navbar-brand" href="#">
-                <img src="res/img/icon.svg" width="30" height="30" class="d-inline-block align-top" alt="">
+                <img src="res/img/icon.png" width="50" height="50" class="d-inline-block align-top" alt="">
               </a>
               <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -27,27 +27,34 @@
           </nav>
         </header>
 
-        <div class="container text-center">
-          <div class="row vh-100 bg-ws">
+        <div class="container-fluid text-center bg-clip">
+          <div class="row vh-100">
             <div class="col-md-8 offset-md-2 my-auto">
                 <h1 class="align-middle display-4 headline">The home of Valorant montages.</h1>
                   <p class="headline lead">I create Valorant montages to make your frags look even more sick.</p>
+                <img src="res/img/icon.png" width="200" height="200">
             </div>
           </div>
         </div>
 
         <div class="container">
           <div class="row offer-height">
-            <h1 class="lead col bg">GIF of content floating</h1>
-            <h1 class="col display-5 text-left my-auto">You deliver as much content as you want. I pick what you need.</h1>
+            <div class="col my-auto text-center">
+            <img src="res/img/mailbox.gif">
+            </div>
+            <h1 class="col display-5 text-left my-auto bg-clip">You deliver as much content as you want. I pick what you need.</h1>
             </div> 
           <div class="row offer-height">
-            <h1 class="display-5 col text-right my-auto">You decide how long your clip should be. I make this time an experience.</h1>
-            <h1 class="lead col bg">GIF of a clock racing</h1>
+            <h1 class="display-5 col text-right my-auto bg-clip">You decide how long your clip should be. I make this time an experience.</h1>
+            <div class="col my-auto text-center">
+              <img src="res/img/film-roll.gif">
+              </div>
             </div>
           <div class="row offer-height">
-            <h1 class="lead col bg">Music GIF</h1>
-            <h1 class="display-5 col text-left my-auto offer-text">You deliver the sound you want. I care for designing and mixing it.</h1>
+            <div class="col my-auto text-center">
+              <img src="res/img/tune.gif">
+              </div>
+            <h1 class="display-5 col text-left my-auto offer-text bg-clip">You deliver the sound you want. I care for designing and mixing it.</h1>
             </div>
           </div>
 
@@ -58,7 +65,7 @@
               </video>
               </div>
             </div>
-
+          
         <div class="container">
           <div class="row">
             <div class="col-sm">
