--- a/index.html
+++ b/index.html
@@ -59,42 +59,43 @@
           </div>
 
           <div class="container-fluid">
-            <div class="row vh-100 bg-ws">
+            <div class="row bg-ws">
               <video autoplay muted loop id="myVideo">
                 <source src="res/movie.mp4" type="video/mp4">
               </video>
               </div>
-            </div>
+          </div>
           
         <div class="container">
           <div class="row">
             <div class="col-sm">
-            <div class="card" style="width: 20rem;">
-              <img src="..." class="card-img-top" alt="...">
+            <div class="card" style="width: 18rem;">
+              <img src="res/img/clock.gif" class="card-img-top" alt="...">
               <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                <a href="#" class="btn btn-primary">Go somewhere</a>
+                <h5 class="card-title">One minute</h5>
+                <p class="card-text">Give your friends and clan members a sneak peek how you own haven, split or xxx.
+                </p>
+                <a href="#" class="btn btn-primary">Continue (20.00€)</a>
               </div>
             </div>
           </div>
             <div class="col-sm">
-            <div class="card" style="width: 20rem;">
-              <img src="..." class="card-img-top" alt="...">
+            <div class="card" style="width: 18rem;">
+              <img src="res/img/clock.gif" class="card-img-top" alt="...">
               <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                <a href="#" class="btn btn-primary">Go somewhere</a>
+                <h5 class="card-title">Two minutes</h5>
+                <p class="card-text">More than a sneak peek but definitely less to show everyting you mastered in te last days.</p>
+                <a href="#" class="btn btn-primary">Continue (40.00€)</a>
               </div>
             </div>
           </div>
           <div class="col-sm">
-            <div class="card" style="width: 20rem;">
-              <img src="..." class="card-img-top" alt="...">
+            <div class="card" style="width: 18rem;">
+              <img src="res/img/clock.gif" class="card-img-top" alt="...">
               <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                <a href="#" class="btn btn-primary">Go somewhere</a>
+                <h5 class="card-title">Tree minutes</h5>
+                <p class="card-text">That's a sick frag movie length. Go for it!</p>
+                <a href="#" class="btn btn-primary">Continue (60.00€)</a>
               </div>
             </div>
           </div>
