google analytics add

--- a/index.html
+++ b/index.html
@@ -5,6 +5,14 @@
         <link rel="stylesheet" type="text/css" href="styles/styles.css">
         <title>Der Honiglecker</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=G-QBR8S52X5P"></script>
+        <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+        gtag('config', 'G-QBR8S52X5P');
+</script>
     </head>
     <body>
         <header>
