changed the picture

--- a/index.html
+++ b/index.html
@@ -78,32 +78,32 @@
           <div class="row">
             <div class="col-sm">
             <div class="card" style="width: 18rem;">
-              <img src="res/img/clock.gif" class="card-img-top" alt="...">
+              <img src="https://cdn.prod.www.spiegel.de/images/7fd9f1ae-8c6a-435d-93ec-63bb18d37bcb_w948_r1.77_fpx28_fpy61.jpg" class="card-img-top" alt="...">
               <div class="card-body">
                 <h5 class="card-title">One minute</h5>
                 <p class="card-text">Give your friends and clan members a sneak peek how you own haven, split or xxx.
                 </p>
-                <a href="#" class="btn btn-primary">Continue (20.00€)</a>
+                <a href="#" class="btn btn-primary">Continue (20.00 Euro)</a>
               </div>
             </div>
           </div>
             <div class="col-sm">
             <div class="card" style="width: 18rem;">
-              <img src="res/img/clock.gif" class="card-img-top" alt="...">
+              <img src="res/img/icon.png" class="card-img-top" alt="...">
               <div class="card-body">
                 <h5 class="card-title">Two minutes</h5>
                 <p class="card-text">More than a sneak peek but definitely less to show everyting you mastered in te last days.</p>
-                <a href="#" class="btn btn-primary">Continue (40.00€)</a>
+                <a href="#" class="btn btn-primary">Continue (40.00 Euro)</a>
               </div>
             </div>
           </div>
           <div class="col-sm">
             <div class="card" style="width: 18rem;">
-              <img src="res/img/clock.gif" class="card-img-top" alt="...">
+              <img src="https://cdn.prod.www.spiegel.de/images/7fd9f1ae-8c6a-435d-93ec-63bb18d37bcb_w948_r1.77_fpx28_fpy61.jpg" class="card-img-top" alt="...">
               <div class="card-body">
-                <h5 class="card-title">Tree minutes</h5>
+                <h5 class="card-title">Three minutes</h5>
                 <p class="card-text">That's a sick frag movie length. Go for it!</p>
-                <a href="#" class="btn btn-primary">Continue (60.00€)</a>
+                <a href="#" class="btn btn-primary">Continue (60.00 Euro)</a>
               </div>
             </div>
           </div>
