fixed the clip size

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
           </div>
         </div>
 
-        <div class="container">
+        <div class="container-fluid">
           <div class="row offer-height">
             <div class="col my-auto text-center">
             <img src="res/img/mailbox.gif">
@@ -67,7 +67,7 @@
           </div>
 
           <div class="container-fluid">
-            <div class="row bg-ws">
+            <div class="row">
               <video autoplay muted loop id="myVideo">
                 <source src="res/movie.mp4" type="video/mp4">
               </video>
