-added almost every styling -> now it needs to be beautyfied

--- a/index.html
+++ b/index.html
@@ -25,17 +25,17 @@
               </button>
               <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                 <div class="navbar-nav">
-                  <a class="nav-item nav-link active" href="#">Welcome <span class="sr-only">(current)</span></a>
-                  <a class="nav-item nav-link" href="#">Offering</a>
-                  <a class="nav-item nav-link" href="#">Taste</a>
-                  <a class="nav-item nav-link" href="#">Pricing</a>
-                  <a class="nav-item nav-link" href="#">Contact</a>
+                  <a class="nav-item nav-link active" href="#welcome">Welcome <span class="sr-only">(current)</span></a>
+                  <a class="nav-item nav-link" href="#mypromise">My Promise</a>
+                  <a class="nav-item nav-link" href="#taste">Taste</a>
+                  <a class="nav-item nav-link" href="#pricing">Pricing</a>
+                  <a class="nav-item nav-link" href="#contact">Contact</a>
                 </div>
               </div>
           </nav>
         </header>
 
-        <div class="container-fluid text-center bg-clip">
+        <div id="welcome" class="container-fluid text-center bg-clip">
           <div class="row vh-100">
             <div class="col-md-8 offset-md-2 my-auto">
                 <h1 class="align-middle display-4 headline">The home of Valorant montages.</h1>
@@ -45,7 +45,7 @@
           </div>
         </div>
 
-        <div class="container-fluid">
+        <div id="mypromise" class="container-fluid">
           <div class="row offer-height">
             <div class="col my-auto text-center">
             <img src="res/img/mailbox.gif">
@@ -66,7 +66,7 @@
             </div>
           </div>
 
-          <div class="container-fluid">
+          <div id="taste" class="container-fluid">
             <div class="row">
               <video autoplay muted loop id="myVideo">
                 <source src="res/movie.mp4" type="video/mp4">
@@ -74,41 +74,62 @@
               </div>
           </div>
           
-        <div class="container">
+        <div id="pricing" class="container">
           <div class="row">
-            <div class="col-sm">
+            <div class="col-lg">
             <div class="card" style="width: 18rem;">
-              <img src="https://cdn.prod.www.spiegel.de/images/7fd9f1ae-8c6a-435d-93ec-63bb18d37bcb_w948_r1.77_fpx28_fpy61.jpg" class="card-img-top" alt="...">
+              <img src="res/img/10.png" class="card-img-top" alt="...">
               <div class="card-body">
-                <h5 class="card-title">One minute</h5>
-                <p class="card-text">Give your friends and clan members a sneak peek how you own haven, split or xxx.
+                <h5 class="card-title">Package 1</h5>
+                <p class="card-text">Give your friends and clan members a sneak peek how you own haven, split or bind.
                 </p>
-                <a href="#" class="btn btn-primary">Continue (20.00 Euro)</a>
+                <a href="https://www.fiverr.com/derhoniglecker" class="btn btn-primary">Continue (20.00 Euro)</a>
               </div>
             </div>
           </div>
-            <div class="col-sm">
+            <div class="col-lg">
             <div class="card" style="width: 18rem;">
-              <img src="res/img/icon.png" class="card-img-top" alt="...">
+              <img src="res/img/30.png" class="card-img-top" alt="...">
               <div class="card-body">
-                <h5 class="card-title">Two minutes</h5>
-                <p class="card-text">More than a sneak peek but definitely less to show everyting you mastered in te last days.</p>
-                <a href="#" class="btn btn-primary">Continue (40.00 Euro)</a>
+                <h5 class="card-title">Package 2</h5>
+                <p class="card-text">More than a sneak peek but definitely less to show everyting you mastered in the last days.</p>
+                <a href="https://www.fiverr.com/derhoniglecker" class="btn btn-primary">Continue (40.00 Euro)</a>
               </div>
             </div>
           </div>
-          <div class="col-sm">
+          <div class="col-lg">
             <div class="card" style="width: 18rem;">
-              <img src="https://cdn.prod.www.spiegel.de/images/7fd9f1ae-8c6a-435d-93ec-63bb18d37bcb_w948_r1.77_fpx28_fpy61.jpg" class="card-img-top" alt="...">
+              <img src="res/img/60.png" class="card-img-top" alt="...">
               <div class="card-body">
-                <h5 class="card-title">Three minutes</h5>
-                <p class="card-text">That's a sick frag movie length. Go for it!</p>
-                <a href="#" class="btn btn-primary">Continue (60.00 Euro)</a>
+                <h5 class="card-title">Package 3</h5>
+                <p class="card-text">Congratulations. You are the initiator of real art. Lean back and enjoy your full length frag movie.</p>
+                <a href="https://www.fiverr.com/derhoniglecker" class="btn btn-primary">Continue (60.00 Euro)</a>
               </div>
             </div>
           </div>
           </div>
         </div>
+
+        <div id="contact" class="container-fluid text-center bg-clip">
+          <div class="row vh-100">
+            <div class="col-md-8 offset-md-2 my-auto">
+                <h1 class="align-middle display-4 headline">Get your own clip now!</h1>
+                <a href="https://www.fiverr.com/derhoniglecker" target="_blank"><img src="res/img/fiver_logo.png" width="30%" height="30%"></a>
+            </div>
+          </div>
+        </div>
+
+      <!-- Footer -->
+<footer class="page-footer font-small">
+
+  <!-- Copyright -->
+  <div class="footer-copyright text-center py-3">© 2020 Copyright:
+    <a href="https://www.fiverr.com/derhoniglecker">Der Honiglecker</a>
+  </div>
+  <!-- Copyright -->
+
+</footer>
+<!-- Footer -->
 
         <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
