changed google analytics tag

--- a/index.html
+++ b/index.html
@@ -6,13 +6,14 @@
         <title>Der Honiglecker</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <!-- Global site tag (gtag.js) - Google Analytics -->
-        <script async src="https://www.googletagmanager.com/gtag/js?id=G-QBR8S52X5P"></script>
+        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-166905618-1"></script>
         <script>
         window.dataLayer = window.dataLayer || [];
         function gtag(){dataLayer.push(arguments);}
         gtag('js', new Date());
-        gtag('config', 'G-QBR8S52X5P');
+        gtag('config', 'UA-166905618-1');
 </script>
+
     </head>
     <body>
         <header>
