added dsgvo + impressum

--- a/index.html
+++ b/index.html
@@ -11,9 +11,7 @@
         window.dataLayer = window.dataLayer || [];
         function gtag(){dataLayer.push(arguments);}
         gtag('js', new Date());
-        gtag('config', 'UA-166905618-1');
-</script>
-
+        gtag('config', 'UA-166905618-1');</script>
     </head>
     <body>
         <header>
@@ -35,7 +33,6 @@
               </div>
           </nav>
         </header>
-
         <div id="welcome" class="container-fluid text-center bg-clip">
           <div class="row vh-100">
             <div class="col-md-8 offset-md-2 my-auto">
@@ -119,6 +116,23 @@
             </div>
           </div>
         </div>
+
+          <!-- Site footer -->
+    <footer>
+      <div class="container text-center">
+        <div class="row">
+            <p class="copyright-text">Copyright &copy; 2020 All Rights Reserved by 
+         <a href="#">Der Honiglecker</a>.</p>
+         <br>
+         <p class="copyright-text"><a href="impressum.html">Impressum</a></p>.
+         <br>
+         <p class="copyright-text"><a href="dsgvo.html">GDPR</a></p>.
+          </div>
+        </div>
+        <!--Start Cookie Script-->
+<script type="text/javascript" charset="UTF-8" src="http://chs03.cookie-script.com/s/e8028c3aa445a928334d30d1d85a02ce.js"></script>
+<!--End Cookie Script-->
+</footer>
 
         <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
