background movie done

--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
         gtag('config', 'UA-166905618-1');</script>
     </head>
     <body>
-        <header>
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <a class="navbar-brand" href="#">
                 <img src="res/img/icon.png" width="50" height="50" class="d-inline-block align-top" alt="">
@@ -32,16 +31,22 @@
                 </div>
               </div>
           </nav>
-        </header>
-        <div id="welcome" class="container-fluid text-center bg-clip">
-          <div class="row vh-100">
-            <div class="col-md-8 offset-md-2 my-auto">
-                <h1 class="align-middle display-4 headline">The home of Valorant montages.</h1>
-                  <p class="headline lead">I create Valorant montages to make your frags look even more sick.</p>
-                <img src="res/img/icon.png" width="200" height="200">
+
+          <div class="video-background-holder">
+            <div class="video-background-overlay"></div>
+            <video playsinline="playsinline" autoplay="autoplay" muted="muted" loop="loop">
+                  <source src="res/movie.mp4" type="video/mp4">
+              </video>
+            <div class="video-background-content container h-100">
+              <div class="d-flex h-100 text-center align-items-center">
+                <div class="w-100 text-white">
+                  <h1 class="display-4">THE HOME OF VALORANT MONTAGES</h1>
+                  <p class="lead mb-0">CLIPS BY ME FOR YOU</p>
+                  
+                </div>
+              </div>
             </div>
           </div>
-        </div>
 
         <div id="mypromise" class="container-fluid">
           <div class="row offer-height">
@@ -62,14 +67,6 @@
               </div>
             <h1 class="display-5 col text-left my-auto offer-text bg-clip">You deliver the sound you want. I care for designing and mixing it.</h1>
             </div>
-          </div>
-
-          <div id="taste" class="container-fluid">
-            <div class="row">
-              <video autoplay muted loop id="myVideo">
-                <source src="res/movie.mp4" type="video/mp4">
-              </video>
-              </div>
           </div>
           
         <div id="pricing" class="container">
@@ -122,11 +119,11 @@
       <div class="container text-center">
         <div class="row">
             <p class="copyright-text">Copyright &copy; 2020 All Rights Reserved by 
-         <a href="#">Der Honiglecker</a>.</p>
-         <br>
-         <p class="copyright-text"><a href="impressum.html">Impressum</a></p>.
-         <br>
-         <p class="copyright-text"><a href="dsgvo.html">GDPR</a></p>.
+            <a href="#">Der Honiglecker</a>.</p>
+            <br>
+            <p class="copyright-text"><a href="impressum.html">Impressum</a></p>.
+            <br>
+            <p class="copyright-text"><a href="dsgvo.html">GDPR</a></p>.
           </div>
         </div>
         <!--Start Cookie Script-->
