Nice background / overlay / landing page effect

--- a/index.html
+++ b/index.html
@@ -39,10 +39,11 @@
               </video>
             <div class="video-background-content container h-100">
               <div class="d-flex h-100 text-center align-items-center">
-                <div class="w-100 text-white">
-                  <h1 class="display-4">THE HOME OF VALORANT MONTAGES</h1>
-                  <p class="lead mb-0">CLIPS BY ME FOR YOU</p>
-                  
+                <div class="w-100">
+                  <div class="video-text">
+                    <h1 class="display-4">THE HOME OF VALORANT MONTAGES</h1>
+                    <h3 class="lead">CLIPS BY ME FOR YOU</p>
+                  </div>
                 </div>
               </div>
             </div>
