Added styles to dsgvo and impressum page

--- a/index.html
+++ b/index.html
@@ -313,7 +313,7 @@
         <!-- You can delete the links only if you purchased the pro version. -->
         <!-- Licensing information: https://bootstrapmade.com/license/ -->
         <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/onepage-multipurpose-bootstrap-template/ -->
-        Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+        With design parts from <a href="https://bootstrapmade.com/">BootstrapMade</a>
       </div>
     </div>
     <div class="social-links text-center text-md-right pt-3 pt-md-0">
