--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
   
           <div class="section-title">
             <h2>Pricing</h2>
-            <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+            <p>Nothing is for free neither are my clips. But I will make sure that you will get the best out of every cent you are paying for my service.</p>
           </div>
   
           <div class="row">
