Publishable - SEO inc

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                   <a class="nav-item nav-link" href="#taste">Taste</a>
                   <a class="nav-item nav-link" href="#pricing">Pricing</a>
                   <a class="nav-item nav-link" href="#contact">Contact</a>
-                  <a href="#pricing" class="nav-item nav-link get-started-btn scrollto">Get Started</a>
+                  <a href="#mypromise" class="nav-item nav-link get-started-btn scrollto">Get Started</a>
                 </div>
               </div>
           </nav>
@@ -48,7 +48,7 @@
                 <div class="w-100">
                   <div class="video-text">
                     <h1 class="display-4">THE HOME OF VALORANT MONTAGES</h1>
-                    <h3 class="lead">CLIPS BY ME FOR YOU</p>
+                    <h3 class="lead">LEVEL-UP YOURSELF</p>
                   </div>
                 </div>
               </div>
@@ -105,7 +105,7 @@
 
           <div class="col-lg-6 video-box align-self-baseline" data-aos="fade-right" data-aos-delay="100">
             <div class="embed-responsive embed-responsive-16by9">
-              <iframe width="560" height="315" src="https://www.youtube.com/embed/ZgchNeieAmU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+              <iframe width="560" height="315" src="https://www.youtube.com/embed/aelVdvtzNCQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
           </div>
 
@@ -126,6 +126,70 @@
     </section><!-- End About Video Section -->
 
 
+
+    <!-- ======= Testimonials Section ======= -->
+    <section id="testimonials" class="testimonials section-bg">
+      <div class="container" data-aos="fade-up">
+        <div class="section-title">
+          <h2>Testimonials</h2>
+          <p>We should just let my customers speak for me.</p>
+        </div>
+
+        <div class="row">
+
+          <div class="col-lg-6">
+            <div class="testimonial-item">
+              <img src="https://fiverr-res.cloudinary.com/image/upload/t_profile_original,q_auto,f_auto/v1/attachments/profile/photo/f7e132b21507e4243671fae01e40f17d-711563381589876658.405554/CE0DE61C-B387-40F2-B7E0-9566A033ED76" class="testimonial-img" alt="">
+              <h3>watchwazi</h3>
+              <p>
+                <i class="bx bxs-quote-alt-left quote-icon-left"></i>
+                Man made me the hardest montage I’ve ever had. Buy from this guy.
+                <i class="bx bxs-quote-alt-right quote-icon-right"></i>
+              </p>
+            </div>
+          </div>
+
+          <div class="col-lg-6">
+            <div class="testimonial-item mt-4 mt-lg-0">
+              <img src="https://fiverr-res.cloudinary.com/image/upload/t_profile_original,q_auto,f_auto/v1/attachments/profile/photo/e9e824fff0d9cf106ad923f92ea346fe-1537715712242/top550.jpg" class="testimonial-img" alt="">
+              <h3>kozkozo</h3>
+              <p>
+                <i class="bx bxs-quote-alt-left quote-icon-left"></i>
+                Really happy with the end product and everything went smooth. Had a small thing i wanted changed in the edit and he did fixed it in under an hour!
+                <i class="bx bxs-quote-alt-right quote-icon-right"></i>
+              </p>
+            </div>
+          </div>
+
+          <div class="col-lg-6">
+            <div class="testimonial-item mt-4">
+              <img src="https://fiverr-res.cloudinary.com/image/upload/t_profile_original,q_auto,f_auto/v1/attachments/profile/photo/f8cb99242150bc10713582102d2cfc0e-738746901553419602.062076/01A636BD-E56F-453C-B61A-FC55194E52A9" class="testimonial-img" alt="">
+              <h3>matthewhunt7</h3>
+              <p>
+                <i class="bx bxs-quote-alt-left quote-icon-left"></i>
+                Sick stuff honestly. Really clean cut edit. Solid work. Will definitely use them again for another montage at some point! Highly recommend.
+                <i class="bx bxs-quote-alt-right quote-icon-right"></i>
+              </p>
+            </div>
+          </div>
+
+          <div class="col-lg-6">
+            <div class="testimonial-item mt-4">
+              <img src="https://fiverr-res.cloudinary.com/image/upload/t_profile_original,q_auto,f_auto/v1/attachments/profile/photo/a28ac17f757270086aa9e395c4851d8a-881316261589221730.4581342/25226766-E02D-46B6-B64F-F4A4A448C0F7" class="testimonial-img" alt="">
+              <h3>wristy24</h3>
+              <p>
+                <i class="bx bxs-quote-alt-left quote-icon-left"></i>
+                Very experienced editor, knows what he is doing, he will do exactly what you ask of him in a timely matter. will order again for sure.
+                <i class="bx bxs-quote-alt-right quote-icon-right"></i>
+              </p>
+            </div>
+          </div>
+
+        </div>
+
+      </div>
+    </section>
+
       <!-- ======= Pricing Section ======= -->
       <section id="pricing" class="pricing">
         <div class="container" data-aos="fade-up">
@@ -140,7 +204,7 @@
             <div class="col-lg-4 col-md-6" data-aos="zoom-im" data-aos-delay="100">
               <div class="box">
                 <h3>Beginner</h3>
-                <h4><sup>$</sup>25</h4>
+                <h4><sup>€</sup>24</h4>
                 <ul>
                   <li>Up to Unlimited Minutes of Footage Provided</li>
                   <li>Up to 1 Minute Running Time</li>
@@ -150,7 +214,7 @@
                   <li>2 days delivery</li>
                 </ul>
                 <div class="btn-wrap">
-                  <a href="https://www.fiverr.com/derhoniglecker" class="btn-buy">Buy Now</a>
+                  <a href="https://www.fiverr.com/derhoniglecker/edit-your-valorant-montage?context_referrer=user_page&ref_ctx_id=31c068da-dc2c-4b0d-b72d-91b938a3db8a&pckg_id=1&pos=1" target="_blank" class="btn-buy">Buy Now</a>
                 </div>
               </div>
             </div>
@@ -158,7 +222,7 @@
             <div class="col-lg-4 col-md-6 mt-4 mt-md-0" data-aos="zoom-in" data-aos-delay="100">
               <div class="box featured">
                 <h3>Intermediate</h3>
-                <h4><sup>$</sup>40</h4>
+                <h4><sup>€</sup>38</h4>
                 <ul>
                   <li>Up to Unlimited Minutes of Footage Provided</li>
                   <li>Up to 2 Minute Running Time</li>
@@ -168,7 +232,7 @@
                   <li>3 days delivery</li>
                 </ul>
                 <div class="btn-wrap">
-                  <a href="https://www.fiverr.com/derhoniglecker" class="btn-buy">Buy Now</a>
+                  <a href="https://www.fiverr.com/derhoniglecker/edit-your-valorant-montage?context_referrer=user_page&ref_ctx_id=31c068da-dc2c-4b0d-b72d-91b938a3db8a&pckg_id=1&pos=1" target="_blank" class="btn-buy">Buy Now</a>
                 </div>
               </div>
             </div>
@@ -176,7 +240,7 @@
             <div class="col-lg-4 col-md-6 mt-4 mt-lg-0" data-aos="zoom-in" data-aos-delay="100">
               <div class="box">
                 <h3>Pro</h3>
-                <h4><sup>$</sup>60</span></h4>
+                <h4><sup>€</sup>53</span></h4>
                 <ul>
                   <li>Up to Unlimited Minutes of Footage Provided</li>
                   <li>Up to 3 Minute Running Time</li>
@@ -186,7 +250,7 @@
                   <li>3 days delivery</li>
                 </ul>
                 <div class="btn-wrap">
-                  <a href="https://www.fiverr.com/derhoniglecker" class="btn-buy">Buy Now</a>
+                  <a href="https://www.fiverr.com/derhoniglecker/edit-your-valorant-montage?context_referrer=user_page&ref_ctx_id=31c068da-dc2c-4b0d-b72d-91b938a3db8a&pckg_id=1&pos=1" target="_blank" class="btn-buy">Buy Now</a>
                 </div>
               </div>
             </div>
@@ -195,6 +259,17 @@
   
         </div>
       </section><!-- End Pricing Section -->
+
+
+      <section id="cta" class="cta">
+        <div class="container" data-aos="zoom-in">
+          <div class="text-center">
+            <h3>Why not buying right now?</h3>
+            <p> I hope you got a taste of what I can deliver to you. The clients today are happy, Valorant will launch soon and the game is here to stay. So why not starting into this new FPS era with your own first montage?</p>
+            <a class="cta-btn" href="https://www.fiverr.com/derhoniglecker/edit-your-valorant-montage?context_referrer=user_page&ref_ctx_id=31c068da-dc2c-4b0d-b72d-91b938a3db8a&pckg_id=1&pos=1/edit-your-valorant-montage?context_referrer=user_page&ref_ctx_id=31c068da-dc2c-4b0d-b72d-91b938a3db8a&pckg_id=1&pos=1" target="_blank">Get it now</a>
+          </div>
+        </div>
+      </section>
 
 
 
@@ -262,46 +337,6 @@
 
  <!-- ======= Footer ======= -->
  <footer id="footer">
-
-  <div class="footer-top">
-    <div class="container">
-      <div class="row">
-
-        <div class="col-lg-3 col-md-6 footer-contact">
-          <h3>Der Honiglecker</h3>
-        </div>
-
-        <div class="col-lg-2 col-md-6 footer-links">
-          <h4>Useful Links</h4>
-          <ul>
-            <li><i class="bx bx-chevron-right"></i> <a href="#">Home</a></li>
-            <li><i class="bx bx-chevron-right"></i> <a href="#taste">Taste</a></li>
-            <li><i class="bx bx-chevron-right"></i> <a href="#mypromise">My Promise</a></li>
-            <li><i class="bx bx-chevron-right"></i> <a href="impressum.html">Disclaimer</a></li>
-            <li><i class="bx bx-chevron-right"></i> <a href="dsgvo.html">Privacy policy</a></li>
-          </ul>
-        </div>
-
-        <div class="col-lg-3 col-md-6 footer-links">
-          <h4>Our skills</h4>
-          <ul>
-            <li><i class="bx bx-chevron-right"></i> <a href="#">Valorant Clips</a></li>
-            <li><i class="bx bx-chevron-right"></i> <a href="#">Sound Engineering</a></li>
-            <li><i class="bx bx-chevron-right"></i> <a href="#">Video Editing</a></li>
-            <li><i class="bx bx-chevron-right"></i> <a href="#">Social Media presence</a></li>
-            <li><i class="bx bx-chevron-right"></i> <a href="#">Color grading</a></li>
-          </ul>
-        </div>
-
-        <div class="col-lg-4 col-md-6 footer-newsletter">
-          <h4>Thanks for visiting us!</h4>
-          <p>We hope to see you soon on fiverr. May the frag force be with you.</p>
-        </div>
-
-      </div>
-    </div>
-  </div>
-
   <div class="container d-md-flex w-100 py-4">
 
     <div class="mr-md-auto text-center text-md-left">
@@ -313,13 +348,13 @@
         <!-- You can delete the links only if you purchased the pro version. -->
         <!-- Licensing information: https://bootstrapmade.com/license/ -->
         <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/onepage-multipurpose-bootstrap-template/ -->
-        With design parts from <a href="https://bootstrapmade.com/">BootstrapMade</a>
+        With design parts from <a href="https://bootstrapmade.com/" target="_blank">BootstrapMade</a>, privacy notice here <a href="dsgvo.html" target="_blank">Privacy Policy</a> and disclaimer here <a href="impressum.html" target="_blank">Disclaimer</a>
       </div>
     </div>
     <div class="social-links text-center text-md-right pt-3 pt-md-0">
-      <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
-      <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
-      <a href="#" class="youtube"><i class="bx bxl-youtube"></i></a>
+      <a href="https://twitter.com/honiglecker"  target="_blank" class="twitter"><i class="bx bxl-twitter"></i></a>
+      <a href="https://www.instagram.com/derhoniglecker/" target="_blank" class="instagram"><i class="bx bxl-instagram"></i></a>
+      <a href="https://www.youtube.com/channel/UCjo_z09CONW_oNKpcj7LVbQ" target="_blank" class="youtube"><i class="bx bxl-youtube"></i></a>
     </div>
   </div>
 </footer><!-- End Footer -->
