--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
             <div class="col-lg-4 col-md-6" data-aos="zoom-im" data-aos-delay="100">
               <div class="box">
                 <h3>Beginner</h3>
-                <h4><sup>€</sup>24</h4>
+                <h4><sup>&#8364</sup>24</h4>
                 <ul>
                   <li>Up to Unlimited Minutes of Footage Provided</li>
                   <li>Up to 1 Minute Running Time</li>
@@ -222,7 +222,7 @@
             <div class="col-lg-4 col-md-6 mt-4 mt-md-0" data-aos="zoom-in" data-aos-delay="100">
               <div class="box featured">
                 <h3>Intermediate</h3>
-                <h4><sup>€</sup>38</h4>
+                <h4><sup>&#8364</sup>38</h4>
                 <ul>
                   <li>Up to Unlimited Minutes of Footage Provided</li>
                   <li>Up to 2 Minute Running Time</li>
@@ -240,7 +240,7 @@
             <div class="col-lg-4 col-md-6 mt-4 mt-lg-0" data-aos="zoom-in" data-aos-delay="100">
               <div class="box">
                 <h3>Pro</h3>
-                <h4><sup>€</sup>53</span></h4>
+                <h4><sup>&#8364</sup>53</span></h4>
                 <ul>
                   <li>Up to Unlimited Minutes of Footage Provided</li>
                   <li>Up to 3 Minute Running Time</li>
