--- a/index.html
+++ b/index.html
@@ -8,9 +8,21 @@
         <link href="styles/icofont/icofont.css" rel="stylesheet">
         <link href='https://unpkg.com/boxicons@2.0.5/css/boxicons.min.css' rel='stylesheet'>
         <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet">
-
-        <title>Der Honiglecker</title>
-        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <title>Best Valorant Clips in 2020 for you!</title>
+        <meta name="author" content="Tom Schneider">
+        <meta name="publisher" content="Tom Schneider">
+        <meta name="copyright" content="Viktor Karich & bootstrapmade">
+        <meta name="description" content="We are promising you Valorant montages that blow you away. High-quality editing, amazing sound engineering, and colors from tomorrow. Our rating shows every day: We are making our clients happy.">
+        <meta name="keywords" content="Valorant, clips, editing, beta, riot, riot, games, montage, frags, split, haven, bind, cypher, phoenix, raze, breach, omen, viper, brimstone, radiant, valorant, game, glitch, bug">
+        <meta name="page-topic" content="Dienstleistung">
+        <meta name="page-type" content="Produktinfo">
+        <meta name="audience" content="all"><meta http-equiv="content-language" content="en">
+        <meta name="robots" content="index, follow">
+        <meta name="DC.Creator" content="Tom Schneider">
+        <meta name="DC.Publisher" content="Tom Schneider">
+        <meta name="DC.Rights" content="Viktor Karich & bootstrapmade">
+        <meta name="DC.Description" content="We are promising you Valorant montages that blow you away. High-quality editing, amazing sound engineering, and colors from tomorrow. Our rating shows every day: We are making our clients happy.">
+        <meta name="DC.Language" content="en">
         <script async src="https://www.googletagmanager.com/gtag/js?id=UA-166905618-1"></script>
         <script>
         window.dataLayer = window.dataLayer || [];
